# payment_split_engine

./: Makefile  README.md  pyproject.toml
app/: apps.py  asgi.py  models.py  settings.py  signals.py  urls.py  wsgi.py
app/api/: serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/services/: split_service.py
app/tests/: test_api.py  test_split_calculator.py
